.data/projects/darklua-0.17.2/tests/snapshots/run_convert_command_errors_when_unrecognized_extension.snap
---
source: tests/cli.rs
expression: content
---
an error happened: invalid data format 'yoyo' (possible options are: 'json', 'json5', 'yml' or 'toml') [unrecognized file extension]

