.data/projects/darklua-0.17.2/tests/snapshots/run_convert_command_on_json_file_with_output.snap
---
source: tests/cli.rs
expression: content
---
[2m[32msuccessfully converted data.json[0m [2m(in {{DURATION}})[0m

